Ingress/3 ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-web-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  # tls:
  #   - secretName: traefik-cert
  rules:
  - host: example.haimaxy.com
    http:
      paths:
      - path: /s1
        backend:
          serviceName: svc1
          servicePort: 8080
      - path: /s2
        backend:
          serviceName: svc2
          servicePort: 8080
      - path: /  # 根路径要放在其他的path配置后面
        backend:
          serviceName: svc3
          servicePort: 8080
